--- a/tutorials/dynamic-programming.ipynb
+++ b/tutorials/dynamic-programming.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +296,11 @@
     "    L = []\n",
     "\n",
     "    for i, current in enumerate(seq):\n",
-    "        L.append(max([L[j] for j in range(i) if seq[j] < current], key=len, default=[]) + [current])\n",
+    "        \"\"\"opt, arg = max([(l, j) for (l, j) in L[:i] if l[-1] < current], \n",
+    "                       key=lambda p: len(p[0]), \n",
+    "                       default=([], tuple()))\n",
+    "        L.append(opt + [current], (arg, i))\"\"\"\n",
+    "        L.append(max(filter(lambda prefix: prefix[-1] < current, L[:i]), key=len, default=[]) + [current])\n",
     "\n",
     "    return max(L, key=len), L\n",
     "\n",
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -332,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +358,7 @@
        "[2, 3, 6, 9]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +387,7 @@
        "[[5], [2], [5, 8], [5, 6], [2, 3], [2, 3, 6], [2, 3, 6, 9], [2, 3, 6, 7]]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -405,7 +409,7 @@
        "[2, 3, 6, 9]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -444,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 1.55 s per loop\n"
+      "1 loop, best of 3: 3.73 s per loop\n"
      ]
     }
    ],
@@ -454,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -463,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 2.27 s per loop\n"
+      "1 loop, best of 3: 3.06 s per loop\n"
      ]
     }
    ],
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -491,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -500,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 3.59 s per loop\n"
+      "1 loop, best of 3: 3.94 s per loop\n"
      ]
     }
    ],
@@ -510,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 7.38 s per loop\n"
+      "1 loop, best of 3: 5.32 s per loop\n"
      ]
     }
    ],
@@ -531,12 +535,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `edit_distance`"
+    "# `edit_distance`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -585,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -750,13 +754,405 @@
        " (11, 10): ('expoNEnT▢ial', '▢▢poLYnOmial', 6)}"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "memo_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "(xs, ys, cost), memo_table = edit_distance('exponential', 'polynomial', memo_table=True, mismatch=lambda x,y: 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edit with cost 9:\n",
+      "\n",
+      "expo▢▢n▢▢ential\n",
+      "▢▢polynom▢▢▢ial\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('edit with cost {}:\\n\\n{}\\n{}'.format(cost, xs, ys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): ('', '', 0),\n",
+       " (0, 1): ('▢', 'p', 1),\n",
+       " (0, 2): ('▢▢', 'po', 2),\n",
+       " (0, 3): ('▢▢▢', 'pol', 3),\n",
+       " (0, 4): ('▢▢▢▢', 'poly', 4),\n",
+       " (0, 5): ('▢▢▢▢▢', 'polyn', 5),\n",
+       " (0, 6): ('▢▢▢▢▢▢', 'polyno', 6),\n",
+       " (0, 7): ('▢▢▢▢▢▢▢', 'polynom', 7),\n",
+       " (0, 8): ('▢▢▢▢▢▢▢▢', 'polynomi', 8),\n",
+       " (0, 9): ('▢▢▢▢▢▢▢▢▢', 'polynomia', 9),\n",
+       " (0, 10): ('▢▢▢▢▢▢▢▢▢▢', 'polynomial', 10),\n",
+       " (1, 0): ('e', '▢', 1),\n",
+       " (1, 1): ('▢e', 'p▢', 2),\n",
+       " (1, 2): ('▢▢e', 'po▢', 3),\n",
+       " (1, 3): ('▢▢▢e', 'pol▢', 4),\n",
+       " (1, 4): ('▢▢▢▢e', 'poly▢', 5),\n",
+       " (1, 5): ('▢▢▢▢▢e', 'polyn▢', 6),\n",
+       " (1, 6): ('▢▢▢▢▢▢e', 'polyno▢', 7),\n",
+       " (1, 7): ('▢▢▢▢▢▢▢e', 'polynom▢', 8),\n",
+       " (1, 8): ('▢▢▢▢▢▢▢▢e', 'polynomi▢', 9),\n",
+       " (1, 9): ('▢▢▢▢▢▢▢▢▢e', 'polynomia▢', 10),\n",
+       " (1, 10): ('▢▢▢▢▢▢▢▢▢▢e', 'polynomial▢', 11),\n",
+       " (2, 0): ('ex', '▢▢', 2),\n",
+       " (2, 1): ('▢ex', 'p▢▢', 3),\n",
+       " (2, 2): ('▢▢ex', 'po▢▢', 4),\n",
+       " (2, 3): ('▢▢▢ex', 'pol▢▢', 5),\n",
+       " (2, 4): ('▢▢▢▢ex', 'poly▢▢', 6),\n",
+       " (2, 5): ('▢▢▢▢▢ex', 'polyn▢▢', 7),\n",
+       " (2, 6): ('▢▢▢▢▢▢ex', 'polyno▢▢', 8),\n",
+       " (2, 7): ('▢▢▢▢▢▢▢ex', 'polynom▢▢', 9),\n",
+       " (2, 8): ('▢▢▢▢▢▢▢▢ex', 'polynomi▢▢', 10),\n",
+       " (2, 9): ('▢▢▢▢▢▢▢▢▢ex', 'polynomia▢▢', 11),\n",
+       " (2, 10): ('▢▢▢▢▢▢▢▢▢▢ex', 'polynomial▢▢', 12),\n",
+       " (3, 0): ('exp', '▢▢▢', 3),\n",
+       " (3, 1): ('exp', '▢▢p', 2),\n",
+       " (3, 2): ('exp▢', '▢▢po', 3),\n",
+       " (3, 3): ('exp▢▢', '▢▢pol', 4),\n",
+       " (3, 4): ('exp▢▢▢', '▢▢poly', 5),\n",
+       " (3, 5): ('exp▢▢▢▢', '▢▢polyn', 6),\n",
+       " (3, 6): ('exp▢▢▢▢▢', '▢▢polyno', 7),\n",
+       " (3, 7): ('exp▢▢▢▢▢▢', '▢▢polynom', 8),\n",
+       " (3, 8): ('exp▢▢▢▢▢▢▢', '▢▢polynomi', 9),\n",
+       " (3, 9): ('exp▢▢▢▢▢▢▢▢', '▢▢polynomia', 10),\n",
+       " (3, 10): ('exp▢▢▢▢▢▢▢▢▢', '▢▢polynomial', 11),\n",
+       " (4, 0): ('expo', '▢▢▢▢', 4),\n",
+       " (4, 1): ('expo', '▢▢p▢', 3),\n",
+       " (4, 2): ('expo', '▢▢po', 2),\n",
+       " (4, 3): ('expo▢', '▢▢pol', 3),\n",
+       " (4, 4): ('expo▢▢', '▢▢poly', 4),\n",
+       " (4, 5): ('expo▢▢▢', '▢▢polyn', 5),\n",
+       " (4, 6): ('expo▢▢▢▢', '▢▢polyno', 6),\n",
+       " (4, 7): ('expo▢▢▢▢▢', '▢▢polynom', 7),\n",
+       " (4, 8): ('expo▢▢▢▢▢▢', '▢▢polynomi', 8),\n",
+       " (4, 9): ('expo▢▢▢▢▢▢▢', '▢▢polynomia', 9),\n",
+       " (4, 10): ('expo▢▢▢▢▢▢▢▢', '▢▢polynomial', 10),\n",
+       " (5, 0): ('expon', '▢▢▢▢▢', 5),\n",
+       " (5, 1): ('expon', '▢▢p▢▢', 4),\n",
+       " (5, 2): ('expon', '▢▢po▢', 3),\n",
+       " (5, 3): ('expo▢n', '▢▢pol▢', 4),\n",
+       " (5, 4): ('expo▢▢n', '▢▢poly▢', 5),\n",
+       " (5, 5): ('expo▢▢n', '▢▢polyn', 4),\n",
+       " (5, 6): ('expo▢▢n▢', '▢▢polyno', 5),\n",
+       " (5, 7): ('expo▢▢n▢▢', '▢▢polynom', 6),\n",
+       " (5, 8): ('expo▢▢n▢▢▢', '▢▢polynomi', 7),\n",
+       " (5, 9): ('expo▢▢n▢▢▢▢', '▢▢polynomia', 8),\n",
+       " (5, 10): ('expo▢▢n▢▢▢▢▢', '▢▢polynomial', 9),\n",
+       " (6, 0): ('expone', '▢▢▢▢▢▢', 6),\n",
+       " (6, 1): ('expone', '▢▢p▢▢▢', 5),\n",
+       " (6, 2): ('expone', '▢▢po▢▢', 4),\n",
+       " (6, 3): ('expo▢ne', '▢▢pol▢▢', 5),\n",
+       " (6, 4): ('expo▢▢ne', '▢▢poly▢▢', 6),\n",
+       " (6, 5): ('expo▢▢ne', '▢▢polyn▢', 5),\n",
+       " (6, 6): ('expo▢▢n▢e', '▢▢polyno▢', 6),\n",
+       " (6, 7): ('expo▢▢n▢▢e', '▢▢polynom▢', 7),\n",
+       " (6, 8): ('expo▢▢n▢▢▢e', '▢▢polynomi▢', 8),\n",
+       " (6, 9): ('expo▢▢n▢▢▢▢e', '▢▢polynomia▢', 9),\n",
+       " (6, 10): ('expo▢▢n▢▢▢▢▢e', '▢▢polynomial▢', 10),\n",
+       " (7, 0): ('exponen', '▢▢▢▢▢▢▢', 7),\n",
+       " (7, 1): ('exponen', '▢▢p▢▢▢▢', 6),\n",
+       " (7, 2): ('exponen', '▢▢po▢▢▢', 5),\n",
+       " (7, 3): ('expo▢nen', '▢▢pol▢▢▢', 6),\n",
+       " (7, 4): ('expo▢▢nen', '▢▢poly▢▢▢', 7),\n",
+       " (7, 5): ('expo▢▢nen', '▢▢polyn▢▢', 6),\n",
+       " (7, 6): ('expo▢▢n▢en', '▢▢polyno▢▢', 7),\n",
+       " (7, 7): ('expo▢▢n▢▢en', '▢▢polynom▢▢', 8),\n",
+       " (7, 8): ('expo▢▢n▢▢▢en', '▢▢polynomi▢▢', 9),\n",
+       " (7, 9): ('expo▢▢n▢▢▢▢en', '▢▢polynomia▢▢', 10),\n",
+       " (7, 10): ('expo▢▢n▢▢▢▢▢en', '▢▢polynomial▢▢', 11),\n",
+       " (8, 0): ('exponent', '▢▢▢▢▢▢▢▢', 8),\n",
+       " (8, 1): ('exponent', '▢▢p▢▢▢▢▢', 7),\n",
+       " (8, 2): ('exponent', '▢▢po▢▢▢▢', 6),\n",
+       " (8, 3): ('expo▢nent', '▢▢pol▢▢▢▢', 7),\n",
+       " (8, 4): ('expo▢▢nent', '▢▢poly▢▢▢▢', 8),\n",
+       " (8, 5): ('expo▢▢nent', '▢▢polyn▢▢▢', 7),\n",
+       " (8, 6): ('expo▢▢n▢ent', '▢▢polyno▢▢▢', 8),\n",
+       " (8, 7): ('expo▢▢n▢▢ent', '▢▢polynom▢▢▢', 9),\n",
+       " (8, 8): ('expo▢▢n▢▢▢ent', '▢▢polynomi▢▢▢', 10),\n",
+       " (8, 9): ('expo▢▢n▢▢▢▢ent', '▢▢polynomia▢▢▢', 11),\n",
+       " (8, 10): ('expo▢▢n▢▢▢▢▢ent', '▢▢polynomial▢▢▢', 12),\n",
+       " (9, 0): ('exponenti', '▢▢▢▢▢▢▢▢▢', 9),\n",
+       " (9, 1): ('exponenti', '▢▢p▢▢▢▢▢▢', 8),\n",
+       " (9, 2): ('exponenti', '▢▢po▢▢▢▢▢', 7),\n",
+       " (9, 3): ('expo▢nenti', '▢▢pol▢▢▢▢▢', 8),\n",
+       " (9, 4): ('expo▢▢nenti', '▢▢poly▢▢▢▢▢', 9),\n",
+       " (9, 5): ('expo▢▢nenti', '▢▢polyn▢▢▢▢', 8),\n",
+       " (9, 6): ('expo▢▢n▢enti', '▢▢polyno▢▢▢▢', 9),\n",
+       " (9, 7): ('expo▢▢n▢▢enti', '▢▢polynom▢▢▢▢', 10),\n",
+       " (9, 8): ('expo▢▢n▢▢enti', '▢▢polynom▢▢▢i', 9),\n",
+       " (9, 9): ('expo▢▢n▢▢enti▢', '▢▢polynom▢▢▢ia', 10),\n",
+       " (9, 10): ('expo▢▢n▢▢enti▢▢', '▢▢polynom▢▢▢ial', 11),\n",
+       " (10, 0): ('exponentia', '▢▢▢▢▢▢▢▢▢▢', 10),\n",
+       " (10, 1): ('exponentia', '▢▢p▢▢▢▢▢▢▢', 9),\n",
+       " (10, 2): ('exponentia', '▢▢po▢▢▢▢▢▢', 8),\n",
+       " (10, 3): ('expo▢nentia', '▢▢pol▢▢▢▢▢▢', 9),\n",
+       " (10, 4): ('expo▢▢nentia', '▢▢poly▢▢▢▢▢▢', 10),\n",
+       " (10, 5): ('expo▢▢nentia', '▢▢polyn▢▢▢▢▢', 9),\n",
+       " (10, 6): ('expo▢▢n▢entia', '▢▢polyno▢▢▢▢▢', 10),\n",
+       " (10, 7): ('expo▢▢n▢▢entia', '▢▢polynom▢▢▢▢▢', 11),\n",
+       " (10, 8): ('expo▢▢n▢▢entia', '▢▢polynom▢▢▢i▢', 10),\n",
+       " (10, 9): ('expo▢▢n▢▢entia', '▢▢polynom▢▢▢ia', 9),\n",
+       " (10, 10): ('expo▢▢n▢▢entia▢', '▢▢polynom▢▢▢ial', 10),\n",
+       " (11, 0): ('exponential', '▢▢▢▢▢▢▢▢▢▢▢', 11),\n",
+       " (11, 1): ('exponential', '▢▢p▢▢▢▢▢▢▢▢', 10),\n",
+       " (11, 2): ('exponential', '▢▢po▢▢▢▢▢▢▢', 9),\n",
+       " (11, 3): ('exponential', '▢▢po▢▢▢▢▢▢l', 8),\n",
+       " (11, 4): ('exponential▢', '▢▢po▢▢▢▢▢▢ly', 9),\n",
+       " (11, 5): ('expo▢▢nential', '▢▢polyn▢▢▢▢▢▢', 10),\n",
+       " (11, 6): ('expo▢▢n▢ential', '▢▢polyno▢▢▢▢▢▢', 11),\n",
+       " (11, 7): ('expo▢▢n▢▢ential', '▢▢polynom▢▢▢▢▢▢', 12),\n",
+       " (11, 8): ('expo▢▢n▢▢ential', '▢▢polynom▢▢▢i▢▢', 11),\n",
+       " (11, 9): ('expo▢▢n▢▢ential', '▢▢polynom▢▢▢ia▢', 10),\n",
+       " (11, 10): ('expo▢▢n▢▢ential', '▢▢polynom▢▢▢ial', 9)}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memo_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `matrix_product_ordering`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@memo_holder\n",
+    "def matrix_product_ordering(w):\n",
+    "    \n",
+    "    n = len(w)-1\n",
+    "    T = {(i,i):('▢', 0) for i in range(n)}\n",
+    "    \n",
+    "    def combine(i,r,j):\n",
+    "        p_ir, c_ir = T[i, r]\n",
+    "        p_rj, c_rj = T[r+1, j]\n",
+    "        return '({} {})'.format(p_ir, p_rj), (c_ir + c_rj + w[i]*w[r+1]*w[j+1])\n",
+    "    \n",
+    "    for d in range(1, n):\n",
+    "        for i in range(n-d):\n",
+    "            j = i + d\n",
+    "            T[i, j] = min([combine(i, r, j) for r in range(i, j)], key=lambda t: t[-1])\n",
+    "    \n",
+    "    return T[0, n-1], T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(opt, cost), memo_table = matrix_product_ordering({0:100, 1:20, 2:1000, 3:2, 4:50}, memo_table=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('((▢ (▢ ▢)) ▢)', 54000)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt, cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): ('▢', 0),\n",
+       " (0, 1): ('(▢ ▢)', 2000000),\n",
+       " (0, 2): ('(▢ (▢ ▢))', 44000),\n",
+       " (0, 3): ('((▢ (▢ ▢)) ▢)', 54000),\n",
+       " (1, 1): ('▢', 0),\n",
+       " (1, 2): ('(▢ ▢)', 40000),\n",
+       " (1, 3): ('((▢ ▢) ▢)', 42000),\n",
+       " (2, 2): ('▢', 0),\n",
+       " (2, 3): ('(▢ ▢)', 100000),\n",
+       " (3, 3): ('▢', 0)}"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memo_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "(opt, cost), memo_table = matrix_product_ordering({i:fibonacci(i+1) for i in range(10)}, memo_table=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 3024)"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt, cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): ('▢', 0),\n",
+       " (0, 1): ('(▢ ▢)', 2),\n",
+       " (0, 2): ('((▢ ▢) ▢)', 8),\n",
+       " (0, 3): ('(((▢ ▢) ▢) ▢)', 23),\n",
+       " (0, 4): ('((((▢ ▢) ▢) ▢) ▢)', 63),\n",
+       " (0, 5): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 167),\n",
+       " (0, 6): ('((((((▢ ▢) ▢) ▢) ▢) ▢) ▢)', 440),\n",
+       " (0, 7): ('(((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 1154),\n",
+       " (0, 8): ('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 3024),\n",
+       " (1, 1): ('▢', 0),\n",
+       " (1, 2): ('(▢ ▢)', 6),\n",
+       " (1, 3): ('((▢ ▢) ▢)', 21),\n",
+       " (1, 4): ('(((▢ ▢) ▢) ▢)', 61),\n",
+       " (1, 5): ('((((▢ ▢) ▢) ▢) ▢)', 165),\n",
+       " (1, 6): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 438),\n",
+       " (1, 7): ('((((((▢ ▢) ▢) ▢) ▢) ▢) ▢)', 1152),\n",
+       " (1, 8): ('(((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 3022),\n",
+       " (2, 2): ('▢', 0),\n",
+       " (2, 3): ('(▢ ▢)', 30),\n",
+       " (2, 4): ('((▢ ▢) ▢)', 110),\n",
+       " (2, 5): ('(((▢ ▢) ▢) ▢)', 318),\n",
+       " (2, 6): ('((((▢ ▢) ▢) ▢) ▢)', 864),\n",
+       " (2, 7): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 2292),\n",
+       " (2, 8): ('((((((▢ ▢) ▢) ▢) ▢) ▢) ▢)', 6032),\n",
+       " (3, 3): ('▢', 0),\n",
+       " (3, 4): ('(▢ ▢)', 120),\n",
+       " (3, 5): ('((▢ ▢) ▢)', 432),\n",
+       " (3, 6): ('(((▢ ▢) ▢) ▢)', 1251),\n",
+       " (3, 7): ('((((▢ ▢) ▢) ▢) ▢)', 3393),\n",
+       " (3, 8): ('(((((▢ ▢) ▢) ▢) ▢) ▢)', 9003),\n",
+       " (4, 4): ('▢', 0),\n",
+       " (4, 5): ('(▢ ▢)', 520),\n",
+       " (4, 6): ('((▢ ▢) ▢)', 1885),\n",
+       " (4, 7): ('(((▢ ▢) ▢) ▢)', 5455),\n",
+       " (4, 8): ('((((▢ ▢) ▢) ▢) ▢)', 14805),\n",
+       " (5, 5): ('▢', 0),\n",
+       " (5, 6): ('(▢ ▢)', 2184),\n",
+       " (5, 7): ('((▢ ▢) ▢)', 7896),\n",
+       " (5, 8): ('(((▢ ▢) ▢) ▢)', 22856),\n",
+       " (6, 6): ('▢', 0),\n",
+       " (6, 7): ('(▢ ▢)', 9282),\n",
+       " (6, 8): ('((▢ ▢) ▢)', 33592),\n",
+       " (7, 7): ('▢', 0),\n",
+       " (7, 8): ('(▢ ▢)', 39270),\n",
+       " (8, 8): ('▢', 0)}"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memo_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://oeis.org/A180664"
    ]
   },
   {
