Refactor `matrix_product_ordering` in order to be a higher-order function.

--- a/tutorials/dynamic-programming.ipynb
+++ b/tutorials/dynamic-programming.ipynb
@@ -960,45 +960,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 194,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "@memo_holder\n",
-    "def matrix_product_ordering(w):\n",
+    "def matrix_product_ordering(o, w, op):\n",
     "    \n",
-    "    n = len(w)-1\n",
-    "    T = {(i,i):('▢', 0) for i in range(n)}\n",
+    "    n = len(w)-1 #= len(o)\n",
+    "    T = {(i,i):(lambda: o[i], 0) for i in range(n)}\n",
     "    \n",
     "    def combine(i,r,j):\n",
-    "        p_ir, c_ir = T[i, r]\n",
-    "        p_rj, c_rj = T[r+1, j]\n",
-    "        return '({} {})'.format(p_ir, p_rj), (c_ir + c_rj + w[i]*w[r+1]*w[j+1])\n",
+    "        t_ir, c_ir = T[i, r]\n",
+    "        t_rj, c_rj = T[r+1, j]\n",
+    "        return (lambda: op(t_ir(), t_rj()), \n",
+    "                c_ir + c_rj + w[i]*w[r+1]*w[j+1])\n",
     "    \n",
     "    for d in range(1, n):\n",
     "        for i in range(n-d):\n",
     "            j = i + d\n",
     "            T[i, j] = min([combine(i, r, j) for r in range(i, j)], key=lambda t: t[-1])\n",
     "    \n",
-    "    return T[0, n-1], T"
+    "    opt, cost = T[0, n-1]\n",
+    "    return (opt(), cost), T\n",
+    "\n",
+    "def parens_str_proxy(w, **kwds):\n",
+    "    return matrix_product_ordering(o=['▢']*(len(w)-1), \n",
+    "                                   w=w,\n",
+    "                                   op=lambda a, b: '({} {})'.format(a, b),\n",
+    "                                   **kwds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "(opt, cost), memo_table = matrix_product_ordering({0:100, 1:20, 2:1000, 3:2, 4:50}, memo_table=True)"
+    "(opt, cost), memo_table = parens_str_proxy(w={0:100, 1:20, 2:1000, 3:2, 4:50}, memo_table=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -1009,7 +1017,7 @@
        "('((▢ (▢ ▢)) ▢)', 54000)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -1040,29 +1048,29 @@
        " (3, 3): ('▢', 0)}"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memo_table"
+    "{k:(thunk(), cost) for k,(thunk, cost) in memo_table.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "(opt, cost), memo_table = matrix_product_ordering({i:fibonacci(i+1) for i in range(10)}, memo_table=True)"
+    "(opt, cost), memo_table = parens_str_proxy(w={i:fibonacci(i+1) for i in range(10)}, memo_table=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -1073,7 +1081,7 @@
        "('((((((((▢ ▢) ▢) ▢) ▢) ▢) ▢) ▢) ▢)', 3024)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
@@ -1139,13 +1147,13 @@
        " (8, 8): ('▢', 0)}"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memo_table"
+    "{k:(thunk(), cost) for k,(thunk, cost) in memo_table.items()}"
    ]
   },
   {
